--- a/index.html
+++ b/index.html
@@ -4,33 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>The Fridge Bros</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="header">
       <div class="header-links">
-        <div class="left">The Fridge Bros</div>
-        <div class="right">
-          <ul class="links">
-            <li><a href="google.com">header link one</a></li>
-            <li><a href="google.com">header link two</a></li>
-            <li><a href="google.com">header link three</a></li>
-          </ul>
-        </div>
+        <div class="logo">The Fridge Bros</div>
+        <ul class="links">
+          <li><a href="google.com">header link one</a></li>
+          <li><a href="google.com">header link two</a></li>
+          <li><a href="google.com">header link three</a></li>
+        </ul>
       </div>
       <div class="header-content">
-        <div class="header-text">
-          <p>Developing smart IoT solutions for your fridges</p>
-          <p>
+        <div class="hero">
+          <div class="hero-main">
+            Developing smart IoT solutions for your fridges
+          </div>
+          <div class="hero-secondary">
             Formed by a group of 4 students in NUS, The Fridge Bros develop IoT
             solutions to reliably convert your fridge into a smart fridge at a
             low cost!
-          </p>
+          </div>
           <button>Sign up</button>
         </div>
-        <div class="header-image">
-          <img src="./images/team.jpg" alt="Image of the team." />
-        </div>
+        <img
+          class="header-image"
+          src="./images/team.jpg"
+          alt="Image of the team."
+        />
       </div>
     </div>
 
