--- a/index.html
+++ b/index.html
@@ -36,29 +36,25 @@
         />
       </div>
     </div>
-
     <div class="information">
-      <div class="info">
-        <img src="./images/photoresistor.jpg" alt="photoresistor" />
-        <div class="text">
-          This is the photoresitor to detect if the door is open.
+      <div class="info-header">Information</div>
+      <div class="container">
+        <div class="info">
+          <img src="./images/barberry.png" alt="barberry" />
+          <div class="text">This is a type of plant. We love this one.</div>
         </div>
-      </div>
-      <div class="info">
-        <img src="./images/green.jpg" alt="green" />
-        <div class="text">
-          The LED shows green if your fridge is sufficiently stocked.
+        <div class="info">
+          <img src="./images/chilli.png" alt="chili" />
+          <div class="text">This is another type of plant. Isn't it nice?</div>
         </div>
-      </div>
-      <div class="info">
-        <img src="./images/red.jpg" alt="red" />
-        <div class="text">
-          The LED shows red if your fridge is insufficiently stocked.
+        <div class="info">
+          <img src="./images/pepper.png" alt="pepper" />
+          <div class="text">We have so many plants. Yay plants.</div>
         </div>
-      </div>
-      <div class="info">
-        <img src="./images/setup.jpg" alt="setup" />
-        <div class="text">This is how the overall setup looks like.</div>
+        <div class="info">
+          <img src="./images/saffron.png" alt="saffron" />
+          <div class="text">I'm running out of things to say about plants.</div>
+        </div>
       </div>
     </div>
 
