Complete quote section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         fridge! Now I can easily check my inventory from anywhere I am, helping
         me to make better grocery shopping decisions!
       </p>
-      <p>- A satisfied customer</p>
+      <p class="customer">- A satisfied customer</p>
     </div>
     <div class="call-to-action">
       What are you waiting for? Embark on your smart fridge journey today!
