Complete call to action section

--- a/index.html
+++ b/index.html
@@ -68,8 +68,11 @@
       <p class="customer">- A satisfied customer</p>
     </div>
     <div class="call-to-action">
-      What are you waiting for? Embark on your smart fridge journey today!
-      <button>Sign up</button>
+      <div>
+        <strong>What are you waiting for?</strong>
+        <p class="sub">Embark on your smart fridge journey today!</p>
+      </div>
+      <div><button>Sign up</button></div>
     </div>
     <div class="footer">Copyright © The Odin Project 2021</div>
   </body>
